src/scss/components/_main.scss
@use "../base/functions" as f;
@use "../base/colors" as colors;
@use "../base/breakpoints" as b;

.main {
	display: flex;
	height: 100%;

	&__projects {
		display: block;

		flex-shrink: 0;
		background-color: colors.$light-gray;
		width: 100%;
		height: 100%;
		padding: f.rem(20) f.rem(20);

		position: absolute;
		transform: translateX(-100%);
		opacity: 0;
		pointer-events: none;

		transition: transform 150ms ease-in-out, opacity 150ms ease-in-out,
			width 150ms ease-in-out;

		.project-header {
			display: flex;
			justify-content: space-between;
			align-items: center;
			border-bottom: f.rem(3) solid colors.$underline-color;
			padding-bottom: f.rem(5);

			height: f.rem(40);
			@include b.breakpoints-up(large) {
				height: f.rem(50);
			}
		}

		&.open {
			position: absolute;
			top: f.rem(100);
			width: 100%;
			height: 100vh;
			transform: translateX(0);
			opacity: 1;
			pointer-events: auto;
		}

		@include b.breakpoints-up(medium) {
			&,
			&.open {
				width: min(40%, f.rem(350));
				position: relative;
				transform: translateX(0);
				opacity: 1;
				pointer-events: auto;
			}
		}
	}

	&__tasks-section {
		width: 100%;
		display: flex;
		justify-content: center;

		.main__tasks {
			width: min(100%, f.rem(750));
			padding: f.rem(20) f.rem(30);

			transition: flex-grow 1000ms cubic-bezier(1, -0.06, 1, -0.14);

			.tasks-header {
				width: 100%;
				border-bottom: 2px solid colors.$underline-color;
				padding-bottom: f.rem(5);

				height: f.rem(40);

				@include b.breakpoints-up(large) {
					height: f.rem(50);
				}
			}
		}
	}
}

